--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
   box-sizing: border-box;
   margin: 10px auto;
   border: 2px solid black;
+  border-radius: 10px;
   padding: 20px;
 }
 
@@ -49,7 +50,9 @@ body {
 
 .contact {
   background-color: beige;
+  text-align: center;
 }
+
 img {
   height: 270px;
   width: 270px;
@@ -76,4 +79,8 @@ h2 {
 }
 h1, h2 {
   text-align: center;
+}
+
+.cool {
+  font-family: cursive;
 }
