--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
 .sidebar {
   float: right;
   border: 2px solid black;
+  border-radius: 10px;
   padding: 5px;
   margin: 2px;
   height: 155px;
